2001-09-04  Kevin Ryde  <kevin@swox.se>

	* tune/freq.c: Define a HAVE for each speed_cpu_frequency routine to
	avoid duplicating conditionals.
	(speed_cpu_frequency_sco_etchw): New function.
	(speed_cpu_frequency_table): Use it.
	* tune/README: Mention SCO openunix 8 /etc/hw.

	* mpz/fib_ui.c: Use ?: to avoid a gcc 3 bug on powerpc64.
	Store back a carry for limb<long.

	* mpn/x86/k7/mmx/divrem_1.asm, mpn/x86/k7/mmx/mod_1.asm,
	mpn/x86/p6/mmx/divrem_1.asm: Fix a couple of comments.

	* config.guess: Give m68020 for 68020 or better, not m68k.
	* configfsf.guess: Update to 2001-09-04.

2001-09-02  Kevin Ryde  <kevin@swox.se>

	* configure.in (m68k-*-*): Let m68k mean 68000, not 68020.
	* gmp.texi (Notes for Particular Systems): Update.

	* gmp-impl.h (union ieee_double_extract) [m68k]: Use longs, since int
	might be only 16 bits.

	* tests/mpq/t-aors.c: New file.
	* tests/mpq/Makefile.am: Add it.

	* tests/refmpq.c: New file.
	* tests/Makefile.am: Add it.
	* tests/tests.h: Add prototypes.

	* mpq/aors.c: Share object code for mpq_add and mpq_sub.
	* Makefile.am, mpq/Makefile.am: Single mpq/aors.lo now.

	* tests/devel/try.c (TYPE_SUBMUL_1): Use correct reference routine.

2001-08-30  Kevin Ryde  <kevin@swox.se>

	* mpn/x86/x86-defs.m4 (cmov_available_p): Add pentium4.	

	* gmp-h.in: Put #define renamings with prototypes.
	Remove commented out #defines of gmp-impl.h things.
	(mpn_invert_limb): Remove #define, already in gmp-impl.h.
	(mpn_lshiftc, mpn_rshiftc): Remove #defines, unused.
	(mpn_addsub_nc): Add prototype to #define.

2001-08-28  Kevin Ryde  <kevin@swox.se>

	* gmp.texi: Switch to GFDL.
	(Top): Arrange copyright and conditions to appear here too.  For
	clarity have all this before the miscellaneous macro definitions.
	(Copying): Refer to COPYING.LIB file, mention plain GPL2 in demo
	programs.
	(Contributors, References): Use @appendix rather than @unnumbered.
	(GNU Free Documentation License): New appendix.